<resources>
    <string name="app_name">Workout_april</string>
    <string name="pull_ups_string">Подтягивания</string>
    <string name="long_text">Pellentesque neque eros, feugiat sed convallis at, scelerisque vel odio. Etiam placerat ut libero a hendrerit. Donec a egestas turpis, vitae porta massa. Nam at nisi in turpis eleifend ultrices. Morbi egestas justo vel lacus lobortis hendrerit. Suspendisse tempus, dolor quis mattis finibus, elit mauris lobortis nunc, a varius neque mi vel magna. Quisque quis nibh lacus. Curabitur vitae mollis mi. Vivamus dignissim volutpat vulputate. Nulla aliquet vestibulum diam eget laoreet.

Phasellus urna velit, accumsan nec dolor eget, suscipit malesuada magna. Fusce fringilla cursus nulla, in vestibulum metus vestibulum sit amet. Vivamus at gravida sem. Donec eu massa porta, tincidunt odio ut, vehicula mauris. Aenean a malesuada ligula, et vestibulum ipsum. Ut justo elit, lacinia id nunc id, volutpat finibus diam. Maecenas eu elit sagittis, maximus purus ac, consequat diam. Donec sed volutpat magna, a ornare libero. Aenean auctor volutpat commodo. Integer in eleifend sem, eu elementum purus. Phasellus rhoncus lacus sit amet risus rhoncus blandit. Pellentesque quis tempor odio. Vivamus posuere ex eget dolor sollicitudin molestie. Sed viverra mi at vestibulum condimentum.</string>
    <string name="repeat_count_label">Количество повторов: {0}</string>
    <string name="record_reps_label">Повторов: {0}</string>
    <string name="record_date_label">Дата: {0}</string>
    <string name="text_btn_share">Поделиться</string>
    <string name="first_check_box">Добавить первое дополнительное поле</string>
    <string name="second_check_box">Добавить второе дополнительное поле</string>
    <string name="third_check_box">Добавить третье дополнительное поле</string>
    <string name="first_extra_field_text">Первое дополнительное поле</string>
    <string name="second_extra_field_text">Второе дополнительное поле</string>
    <string name="third_extra_field_text">Третье дополнительное поле</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_clear">Очистить</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_open">Открыть</string>
    <string name="menu_open_popup">Открыть PopupMenu</string>
    <string name="menu_exit_app">Закрыть приложение</string>

    <string name="menu_open_main_windows">Открыть главное окно</string>
    <string name="menu_about_developers">О разработчиках</string>
    <string name="menu_share">Поделиться</string>


    <string name="android_studio">Android Studio</string>
    <string name="android_studio_web">zakharov.nikolay.com</string>

    <string name="nav_camera">Import</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">SlideShow</string>
    <string name="nav_manage">Tools</string>

    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>

    <string name="main_content">Main content</string>
    <string name="gallery_opened">Gallery opened</string>
    <string name="menu_communicate">Communicate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
